🔒 SECURITY: Fix JavaScript dynamic code execution vulnerabilities
- Replace new Function() usage in Navigation.test.js with safe mock classes
- Replace new Function() usage in test_accessibility_fix.js with mock components
- Add comprehensive security documentation and best practices
- Add SECURITY_FIX_NAVIGATION_TESTS.md with security guidelines
- Install Jest and jsdom dependencies for secure testing
- Update emergency stubs and score articles based on user edits
- Eliminate all dynamic code injection vulnerabilities in test files
- Implement secure testing patterns with controlled mock environments

IMPACT: Closes critical security vulnerabilities in JavaScript test files
SECURITY: All dynamic code execution removed from test codebase
TESTS: Maintain functionality while ensuring security compliance

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "newbalancer_go",
   "version": "1.0.0",
-  "main": "index.js",  "scripts": {
+  "main": "index.js",
+  "scripts": {
     "test": "scripts/test.cmd",
     "test:backend": "scripts/test.cmd backend",
     "test:all": "scripts/test.cmd all",
@@ -34,6 +35,7 @@
     "@types/eventsource": "^1.1.15",
     "@types/node": "^22.14.1",
     "eventsource": "^3.0.7",
+    "jest-environment-jsdom": "^30.0.0",
     "jsdom": "^26.1.0",
     "newman": "^6.2.1",
     "typescript": "^5.8.3"
