--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ permissions:
 env:
   GO_VERSION: '1.23'
   NODE_VERSION: '18'
-  GOLANGCI_LINT_VERSION: 'v1.61.0'
+  GOLANGCI_LINT_VERSION: 'v1.64.8'
 
 jobs:
   # Code quality and linting
@@ -106,8 +106,8 @@ jobs:
           go vet -composites=false ./...
           # Run staticcheck for advanced concurrency analysis
           staticcheck ./...
-          # Run golangci-lint with concurrency-focused linters on test files specifically
-          golangci-lint run --enable=govet,staticcheck,gosec,errcheck,ineffassign,misspell --skip-files="" --tests=true ./...
+          # Run golangci-lint with concurrency-focused linters on test files specifically (matching .golangci.yml config)
+          golangci-lint run --skip-files="" --tests=true ./...
 
       - name: Build test server binary for CI
         run: |
