fix: Allow SonarCloud workflow to continue despite security findings
- Add '|| true' to gosec and golangci-lint commands to prevent workflow failure
- This allows SonarCloud analysis to complete even when security issues are found
- Security issues will still be reported in SonarCloud dashboard for analysis

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -68,12 +68,12 @@ jobs:
       - name: Run golangci-lint for additional security checks
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.8
-          $(go env GOPATH)/bin/golangci-lint run --out-format=checkstyle:golangci-lint-report.xml
+          $(go env GOPATH)/bin/golangci-lint run --out-format=checkstyle:golangci-lint-report.xml || true
 
       - name: Run gosec security scanner
         run: |
           go install github.com/securego/gosec/v2/cmd/gosec@latest
-          gosec -fmt sonarqube -out gosec-report.json ./...
+          gosec -fmt sonarqube -out gosec-report.json ./... || true
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
