--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,17 @@
 sonar.projectKey=alexandru-savinov_BalancedNewsGo
 sonar.organization=alexandru-savinov
 
-# Project Information
+# This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=BalancedNewsGo
 sonar.projectVersion=1.0
 
-# Source Code Configuration
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
+
+# Exclusions for analysis
 sonar.exclusions=**/node_modules/**,**/bin/**,**/coverage/**,**/test-results/**,**/vendor/**,**/*.pb.go,**/docs/**,**/scripts/**,**/monitoring/**,**/postman/**,**/sqlite-tools/**,**/backup/**
 
 # Test Configuration
@@ -16,32 +21,7 @@ sonar.test.inclusions=**/*_test.go,**/tests/**/*.go,**/tests/**/*.ts,**/tests/**
 sonar.test.exclusions=**/node_modules/**,**/bin/**,**/vendor/**
 
 # Go Language Configuration
-sonar.go.coverage.reportPaths=coverage.out,coverage/*.out,coverage-*.out
+sonar.go.coverage.reportPaths=coverage.out
 
-# JavaScript/TypeScript Configuration
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
-# Security Configuration
+# Security Configuration - Focus on security issues
 sonar.security.hotspots.inheritFromParent=true
-
-# Quality Gate Configuration
-sonar.qualitygate.wait=true
-
-# Analysis Configuration
-sonar.scm.provider=git
-sonar.scm.forceReloadAll=false
-
-# Coverage Configuration
-sonar.coverage.exclusions=**/cmd/**,**/tools/**,**/scripts/**,**/*_test.go,**/testdata/**,**/mock*.go,**/vendor/**,**/docs/**
-
-# Duplication Configuration
-sonar.cpd.exclusions=**/*_test.go,**/testdata/**,**/mock*.go
-
-# Issue Configuration
-sonar.issue.ignore.multicriteria=e1,e2,e3
-sonar.issue.ignore.multicriteria.e1.ruleKey=go:S1192
-sonar.issue.ignore.multicriteria.e1.resourceKey=**/cmd/**
-sonar.issue.ignore.multicriteria.e2.ruleKey=go:S1192
-sonar.issue.ignore.multicriteria.e2.resourceKey=**/tools/**
-sonar.issue.ignore.multicriteria.e3.ruleKey=javascript:S1192
-sonar.issue.ignore.multicriteria.e3.resourceKey=**/static/**
