Fix SonarCloud quality gate failures
- Fix security vulnerability: Replace unsafe log.Printf with safeLogf in manualScoreHandler
- Fix failing tests: Update test expectations for NO_AUTO_ANALYZE environment
- Fix SQL injection risk: Add table whitelist validation in test database cleanup
- Add resource integrity: Add SHA-384 integrity hashes to HTMX CDN scripts
- Improve test coverage: Ensure tests run properly with environment variables

Resolves SonarCloud quality gate failures for security rating and code coverage.

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,7 +1,13 @@
 name: SonarCloud Security Analysis
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main, develop, frontend-rewrite-v3 ]
+  pull_request:
+    types: [opened, synchronize, reopened]
+  schedule:
+    # Run security analysis daily at 3 AM UTC
+    - cron: '0 3 * * *'
   schedule:
     # Run security analysis daily at 3 AM UTC
     - cron: '0 3 * * *'
