--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -29,11 +29,5 @@ sonar.coverage.exclusions=**/static/js/**,**/tests/**,**/*_test.go,**/cmd/**,**/
 # Security Configuration - Focus on security issues
 sonar.security.hotspots.inheritFromParent=true
 
-# Quality Gate Configuration - Temporarily disable for PR
-sonar.qualitygate.wait=false
-
-# Coverage Configuration - Set more permissive thresholds
-sonar.coverage.exclusions=**/static/js/**,**/tests/**,**/*_test.go,**/cmd/**,**/tools/**,**/internal/testing/**,**/docs/**,**/*.md,**/*.js,**/*.ts,**/internal/api/**
-
-# Disable quality gate conditions temporarily
+# New Code Configuration
 sonar.newCode.referenceBranch=main
