--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -2,12 +2,10 @@ name: SonarCloud Security Analysis
 
 on:
   push:
-    branches: [ main, develop, frontend-rewrite-v3 ]
+    branches: [ main, develop, frontend-rewrite-v3, feature/source-management-system ]
   pull_request:
     types: [opened, synchronize, reopened]
-  schedule:
-    # Run security analysis daily at 3 AM UTC
-    - cron: '0 3 * * *'
+  workflow_dispatch:
   schedule:
     # Run security analysis daily at 3 AM UTC
     - cron: '0 3 * * *'
